[metadata]
name = pharmaship
version = 0.9.0
description = A ship's pharmacy inventory software.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
author = Matthieu Morin
author_email = morinmatthieu@gmail.com
url = http://pharmaship.devmaretique.com
project_urls =
  Bug Tracker = https://github.com/tuxite/pharmaship/issues
  Documentation = https://pharmaship.readthedocs.org
  Source Code =  https://github.com/tuxite/pharmaship

[options]
zip_safe = False
include_package_data = True
packages = find:
scripts =
  bin/pharmaship-sign
install_requires =
  Django
  django-mptt
  djangorestframework
  django-modeltranslation
  rest-framework-generic-relations
  munch
  Cerberus
  coloredlogs
  PyGObject
  WeasyPrint
  python-gnupg
  PyYAML
  PyPDF
  matplotlib
  numpy
  ; pandas

[options.entry_points]
console_scripts =
  pharmaship-admin=pharmaship.manage:main
gui_scripts =
  pharmaship=pharmaship.core.management.commands.gui:main
